# nozomi-video-streamer

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  rust.yml
nozomi-video-streamer/: Cargo.toml  Dockerfile
nozomi-video-streamer-client/: Cargo.toml
nozomi-video-streamer-client/src/: main.rs
nozomi-video-streamer/src/: filters.rs  helper.rs  main.rs
src/: main.rs
templates/: directory.html
