[package]
name = "nozomi-video-streamer-client"
version = "0.5.10"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
structopt = "0.3.3"
fern = "0.5.9"
log = "0.4.8"
anyhow = "1.0.17"
bytes = "0.4.12"
tokio = { version = "0.2", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.11"
chrono = "0.4"
rusqlite = "0.21"
fallible-iterator = "0.2"
tempfile = "3.1"
env_logger = "0.7"
