[package]
name = "nozomi-video-streamer"
version = "0.5.10"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
structopt = "0.3"
anyhow = "1.0"
log = "0.4"
askama = "0.8"
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.2"
chrono = "0.4"
warp = "0.2"
async-std = { version = "1.4", features = ["unstable", "attributes"] }
futures-util = "0.3.1"
hyper = "0.13"
serde = "1.0"
serde_derive = "1.0"
bytes = "0.5"
percent-encoding = "2.1"
tempfile = "3"
base64 = "0.11"
